made temp spritesheets, can ignore these

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 NinjaGame/UserSettings/Layouts/default-2021.dwlt
+NinjaGame/UserSettings/Layouts/default-2021.dwlt
